--- a/data_transform.ipynb
+++ b/data_transform.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "df = pd.DataFrame(dados)\n",
     "\n",
     "#salva em csv\n",
-    "#df.to_csv(\"tabelas_rol.csv\", index=False, header=False, encoding=\"utf-8\")"
+    "df.to_csv(\"tabelas_rol.csv\", index=False, header=False, encoding=\"utf-8\")"
    ]
   },
   {
